--- a/pages/_logistics.scss
+++ b/pages/_logistics.scss
@@ -1,10 +1,10 @@
 
+/*Section About Transportation*/
 .services-items-logistika {
     width: 50%;
     padding-right: 3.5rem;
     
     .services-logistika {
-        
         
         ul {
             display: flex;
