--- a/style.scss
+++ b/style.scss
@@ -21,7 +21,7 @@ body {
 
 
 
-/*Main Content*/
+/*Introductory Main Content*/
 .main-container {
     background-color: $brand-light;
 
@@ -64,6 +64,7 @@ body {
     }
 }
 
+/*Introductory Section*/
 .elektro-bg {
     display: flex;
     align-items: center;
@@ -112,13 +113,11 @@ body {
     }
 }
 
-
-
+/*Section Cards*/
 .section-cards {
     display: flex;
     align-items: center;
     @include padding(6rem 0);
-
 
     .elektro-cards {
         display: flex;
@@ -149,7 +148,6 @@ body {
                 border: 0.063rem solid rgba(209, 213, 219, 1);
                 @include gap(1rem);
                 
-    
                 h5 {
                     @include h5;
                     @include weight(600);
@@ -160,6 +158,7 @@ body {
     }
 }
 
+/*Section About Operation*/
 .section-services {
     @include padding(6rem 0);
 
@@ -214,6 +213,7 @@ body {
     }
 }
 
+/*Section About Why-M&M*/
 .section-items {
     display: flex;
     align-items: center;
@@ -277,6 +277,7 @@ body {
     }
 }
 
+/*Section About Examples*/
 .section-example {
     display: flex;
     align-items: center;
@@ -310,7 +311,7 @@ body {
     }
 }
 
-
+/*Section About Us*/
 .section-aboutus {
     @include padding(6rem 5rem);
     background-color: $brand-light;
@@ -358,7 +359,7 @@ body {
 }
 
 
-/*section from Logistics*/
+/*Section About M&M-App*/
 .section-application {
     padding: 6rem 0;
     
