--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -262,6 +262,8 @@
                 }
     
                 a {
+                    align-items: center;
+                    display: flex;
                     height: 0.875rem;
                     @include margin(0.125rem 0 0 0.25rem);
                 }
