--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@
   padding: 20px;
 }
 
+/*Section About Transportation*/
 .services-items-logistika {
   width: 50%;
   padding-right: 3.5rem;
@@ -377,6 +378,8 @@
   color: rgb(107, 114, 128);
 }
 .footer-container .footer-last-part .footer-last-info .footer-last-frame a {
+  align-items: center;
+  display: flex;
   height: 0.875rem;
   margin: 0.125rem 0 0 0.25rem;
 }
@@ -498,7 +501,7 @@ body {
   font-family: "Golos Text", sans-serif;
 }
 
-/*Main Content*/
+/*Introductory Main Content*/
 .main-container {
   background-color: rgb(234, 237, 241);
 }
@@ -533,6 +536,7 @@ body {
   margin: 0 0 6rem 0;
 }
 
+/*Introductory Section*/
 .elektro-bg {
   display: flex;
   align-items: center;
@@ -576,6 +580,7 @@ body {
   border-radius: 0.75rem;
 }
 
+/*Section Cards*/
 .section-cards {
   display: flex;
   align-items: center;
@@ -614,6 +619,7 @@ body {
   font-weight: 600;
 }
 
+/*Section About Operation*/
 .section-services {
   padding: 6rem 0;
 }
@@ -659,6 +665,7 @@ body {
   width: 100%;
 }
 
+/*Section About Why-M&M*/
 .section-items {
   display: flex;
   align-items: center;
@@ -715,6 +722,7 @@ body {
   border: 0.063rem solid rgba(209, 213, 219, 0.2);
 }
 
+/*Section About Examples*/
 .section-example {
   display: flex;
   align-items: center;
@@ -744,6 +752,7 @@ body {
   color: rgb(56, 65, 80);
 }
 
+/*Section About Us*/
 .section-aboutus {
   padding: 6rem 5rem;
   background-color: rgb(234, 237, 241);
@@ -787,7 +796,7 @@ body {
   padding-left: 3.5rem;
 }
 
-/*section from Logistics*/
+/*Section About M&M-App*/
 .section-application {
   padding: 6rem 0;
 }
