--- a/components/_header.scss
+++ b/components/_header.scss
@@ -10,16 +10,16 @@
         align-items: center;
         height: $header-height;
         max-width: 90rem;
-        @include margin(0 3rem);
+        margin: 0 3rem;
         border-bottom: 0.063rem solid $brand-border;
-        @include padding(2rem 0);
+        padding: 2rem 0;
         width: 100%;
 
         .header-nav {
             ul {
                 display: flex;
                 cursor: pointer;
-                @include gap(2rem)
+                gap: 2rem;
             }
                 li{
                     list-style-type: none;
@@ -33,7 +33,7 @@
 
         .header-list {
             display: flex;
-            @include gap(0.5rem);
+            gap: 0.5rem;
 
             .header-btn {
                 button {
@@ -41,7 +41,7 @@
                 }
                     p {
                         @include text-medium;
-                        @include weight(500);
+                        font-weight: 500;
                     }
             }
 
@@ -54,7 +54,7 @@
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    @include padding(0.5rem 1rem);
+                    padding: 0.5rem 1rem;
                     @include text-medium;
             
                     &:hover,
@@ -69,7 +69,7 @@
                     border-right: 0.313rem solid transparent;
                     border-top: 0.25rem solid black;
                     transition: 0.3s;
-                    @include margin(0 0 0 0.313rem);
+                    margin: 0 0 0 0.313rem;
                 }
                 
                 .caret-rotate {
@@ -78,10 +78,10 @@
                 
                 .menu {
                     list-style-type: none;
-                    @include padding(0.5rem);
+                    padding: 0.5rem;
                     background: white;
                     box-shadow: 0 1rem 2rem 0 rgba(82, 88, 117, 0.08);
-                    @include radius(0.3rem);
+                    border-radius: 0.3rem;
                     color: $text-primary;
                     position: absolute;
                     top: 3rem;
@@ -93,9 +93,9 @@
                     z-index: 1;
             
                     li {
-                        @include padding(1rem);
-                        @include margin(0.5rem 0);
-                        @include radius(0.3rem);
+                        padding: 1rem;
+                        margin: 0.5rem 0;
+                        border-radius: 0.3rem;
                     }
                 }
                 
