--- a/pages/_logistics.scss
+++ b/pages/_logistics.scss
@@ -9,12 +9,12 @@
         ul {
             display: flex;
             flex-direction: column;
-            @include gap(1rem);
-            @include margin(2.5rem 0 0 0);
+            gap: 1rem;
+            margin: 2.5rem 0 0 0;
 
             .services-logistika-list {
                 display: flex;
-                @include gap(0.75rem);
+                gap: 0.75rem;
             }
 
             li {
@@ -23,7 +23,7 @@
                 p {
                     color: $text-secondary;
                     @include text-medium;
-                    @include weight(400);
+                    font-weight: 400;
                 }
             }
         }
@@ -34,21 +34,21 @@
 .services-logistika-feature {
     display: flex;
     flex-direction: column;
-    @include gap(1rem);
+    gap: 1rem;
 }
 
 .services-logistika-item {
-    @include margin(0 0 0 1.875rem);
+    margin: 0 0 0 1.875rem;
 }
 
 .services-logistika-container {
     display: flex;
     align-items: center;
     background-color: $brand-light;
-    @include padding(0.75rem 1rem);
-    @include radius(0.25rem);
-    @include margin(1.5rem 0 0 0);
-    @include gap(0.75rem);
+    padding: 0.75rem 1rem;
+    border-radius: 0.25rem;
+    margin: 1.5rem 0 0 0;
+    gap: 0.75rem;
 
     p {
         color: $text-secondary !important;
