--- a/partials/_mixins.scss
+++ b/partials/_mixins.scss
@@ -40,34 +40,14 @@
     line-height: 1.5rem;
 }
 
-@mixin gap($gap) {
-    gap: $gap;
-}
-
-@mixin padding($padding) {
-    padding: $padding;
-}
-
-@mixin margin($margin) {
-    margin: $margin;
-}
-
-@mixin weight($font-weight) {
-    font-weight: $font-weight;
-}
-
-@mixin radius($border-radius) {
-    border-radius: $border-radius;
-}
-
 @mixin contact-btn {
     display: flex;
-    @include gap(0.5rem);
-    @include padding(0.5rem 1rem);
+    gap: 0.5rem;
+    padding: 0.5rem 1rem;
     cursor: pointer;
     color: $text-primary;
     align-items: center;
-    @include radius(0.25rem);
+    border-radius: 0.25rem;
     border: 1px solid rgba(209, 213, 219, 1);
     background-color: $text-inverse;
 }
