--- a/style.scss
+++ b/style.scss
@@ -28,23 +28,23 @@ body {
     .main-content {
         display: flex;
         flex-direction: column;
-        @include gap(4rem);
+        gap: 4rem;
         max-width: 90rem;
-        @include margin(0 auto);
+        margin: 0 auto;
     }
 
     .main-cards {
         display: flex;
         justify-content: center;
-        @include gap(1rem);
-        @include margin(2.5rem 0 0 0);
+        gap: 1rem;
+        margin: 2.5rem 0 0 0;
 
         .main-cards-div1 {
             width: 50%;
         
             img {
                 width: 100%;
-                @include radius(0.75rem);
+                border-radius: 0.75rem;
             }
             
         }
@@ -54,13 +54,13 @@ body {
         
             img {
                 width: 100%;
-                @include radius(0.75rem);
+                border-radius: 0.75rem;
             }
         }
     }
 
     .main-splide-content {
-        @include margin(0 0 6rem 0);
+        margin: 0 0 6rem 0;
     }
 }
 
@@ -73,10 +73,10 @@ body {
 
     .main-information {
         max-width: 90rem;
-        @include margin(0 auto);
+        margin: 0 auto;
         display: flex;
         align-items: center;
-        @include gap(4rem);
+        gap: 4rem;
 
         .elektro-features {
             max-width: 34.688rem;
@@ -84,8 +84,8 @@ body {
             .elektro-items {
                 display: flex;
                 align-items: center;
-                @include margin(0 0 1.5rem 0);
-                @include gap(0.25rem);
+                margin: 0 0 1.5rem 0;
+                gap: 0.25rem;
                 color: $text-tertiary;      
 
                 p {
@@ -96,19 +96,19 @@ body {
             h1 {
                 @include h1;
                 color: $text-primary;
-                @include weight(600);
-                @include margin(0 0 1.5rem 0);
+                font-weight: 600;
+                margin: 0 0 1.5rem 0;
             }
 
             p {
                 @include text-large;
-                @include weight(400);
+                font-weight: 400;
                 
             }
         }
 
         img {
-            @include radius(0.75rem);
+            border-radius: 0.75rem;
         }
     }
 }
@@ -117,40 +117,38 @@ body {
 .section-cards {
     display: flex;
     align-items: center;
-    @include padding(6rem 0);
+    padding: 6rem 0;
 
     .elektro-cards {
         display: flex;
         flex-direction: column;
         max-width: 90rem;
-        @include margin(0 auto);
-        @include gap(2.5rem);
+        margin: 0 auto;
+        gap: 2.5rem;
     
         h2 {
             @include h2;
-            @include weight(600);
+            font-weight: 600;
             color: $text-primary;
         }
     
         .elektro-item {
             display: flex;
             flex-wrap: wrap;
-            @include gap(1rem);
-            
-            
-    
+            gap: 1rem;
+
             .elektro-card {
                 display: flex;
                 flex-basis: calc(33.33% - 1.25rem);
-                @include padding(1rem 1.25rem);
+                padding: 1rem 1.25rem;
                 align-items: center;
-                @include radius(0.5rem);
+                border-radius: 0.5rem;
                 border: 0.063rem solid rgba(209, 213, 219, 1);
-                @include gap(1rem);
+                gap: 1rem;
                 
                 h5 {
                     @include h5;
-                    @include weight(600);
+                    font-weight: 600;
                 }
                 
             }
@@ -160,45 +158,45 @@ body {
 
 /*Section About Operation*/
 .section-services {
-    @include padding(6rem 0);
+    padding: 6rem 0;
 
     .services-features {
         display: flex;
         flex-direction: column;
         max-width: 90rem;
-        @include margin(0 auto);
-        @include gap(4rem);
+        margin: 0 auto;
+        gap: 4rem;
 
         .services-items {
             display: flex;
             align-items: center;
-            @include gap(3rem);
+            gap: 3rem;
 
             .services-text {
                 width: 50%;
 
                 h2 {
                     @include h2;
-                    @include margin(0 0 1rem 0);
+                    margin: 0 0 1rem 0;
                 }
     
                 p {
                     @include text-large;
                     color: $text-secondary;
-                    @include weight(400);
+                    font-weight: 400;
                 }
     
                 .highlight-part {
-                    @include weight(600);
+                    font-weight: 600;
                 }
             }
 
             .services-part {
-                @include padding(0 3.5rem 0 0);
+                padding: 0 3.5rem 0 0;
             }
 
             .services-part-second {
-                @include padding(0 0 0 3.5rem);
+                padding: 0 0 0 3.5rem;
             }
 
             .services-img {
@@ -217,52 +215,52 @@ body {
 .section-items {
     display: flex;
     align-items: center;
-    @include padding(6rem 0);
+    padding: 6rem 0;
 
     .content-items-info {
         display: flex;
         flex-direction: column;
         max-width: 90rem;
-        @include margin(0 auto);
+        margin: 0 auto;
     }
 
     h2 {
         @include h2;
-        @include margin(0 0 2.5rem 0);
+        margin: 0 0 2.5rem 0;
     }
 
     .items-features {
         display: flex;
-        @include gap(4rem);
+        gap: 4rem;
 
         .items-content {
             display: flex;
             flex-direction: column;
-            @include radius(0.75rem);
-            @include padding(1.5rem 1.5rem 2rem 1.5rem);
+            border-radius: 0.75rem;
+            padding: 1.5rem 1.5rem 2rem 1.5rem;
             width: 100%;
-            @include gap(1.5rem);
+            gap: 1.5rem;
             background-color: $dark-bg;
 
 
             .items-icon {
-                @include padding(0.75rem);
+                padding: 0.75rem;
                 border: 0.063rem solid $color-ondark;
                 width: 3rem;
                 height: 3rem;
-                @include radius(0.25rem);
+                border-radius: 0.25rem;
             }
 
             h5 {
                 @include h5;
-                @include margin(0 0 0.5rem 0);
-                @include weight(600);
+                font-weight: 600;
+                margin: 0 0 0.5rem 0;
                 color: $text-inverse;
             }
 
             p {
                 @include text-medium;
-                @include weight(500);
+                font-weight: 500;
                 color: $text-quad;
             }
         }
@@ -281,14 +279,14 @@ body {
 .section-example {
     display: flex;
     align-items: center;
-    @include padding(6rem 0);
+    padding: 6rem 0;
 
     .container-example {
         display: flex;
         flex-direction: column;
         max-width: 90rem;
-        @include margin(0 auto);
-        @include gap(40px);
+        margin: 0 auto;
+        gap: 2.5rem;
 
         .info-example {
             max-width: 53.313rem;
@@ -296,24 +294,22 @@ body {
             h2 {
                 @include h2;
                 color: $text-primary;
-                @include weight(600);
-                @include margin(0 0 1rem 0);
+                font-weight: 600;
+                margin: 0 0 1rem 0;
             }
     
             p{
                 @include text-large;
-                @include weight(400);
+                font-weight: 400;
                 color: $text-secondary;
             }
         }
-
-        
     }
 }
 
 /*Section About Us*/
 .section-aboutus {
-    @include padding(6rem 5rem);
+    padding: 6rem 5rem;
     background-color: $brand-light;
     display: flex;
     align-items: center;
@@ -321,27 +317,27 @@ body {
     .container-aboutus {
         display: flex;
         max-width: 90rem;
-        @include margin(0 auto);
+        margin: 0 auto;
 
         .container-info {
             width: 50%;
 
             .container-aboutus-word {
                 color: $brand-color;
-                @include weight(500);
+                font-weight: 500;
                 @include text-medium;
             }
 
             h2 {
                 @include h2;
-                @include weight(600);
+                font-weight: 600;
                 color: $text-primary;
-                @include margin(1.5rem 0);
+                margin: 1.5rem 0;
             }
 
             p {
                 @include text-large;
-                @include weight(400);
+                font-weight: 400;
                 color: $text-secondary;
             }
         }
