--- a/components/_header.scss
+++ b/components/_header.scss
@@ -8,7 +8,6 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: $header-height;
         max-width: 90rem;
         margin: 0 3rem;
         border-bottom: 0.063rem solid $brand-border;
@@ -111,4 +110,17 @@
         }
         
     }
+}
+
+/*Breakpointy*/
+@media screen and (max-width: 639px) {
+    .header-wrapper {
+        flex-direction: column;
+    }
+}
+@media screen and (max-width: 1023px) {
+    .header-nav {
+        display: none;
+    }
+    
 }
