--- a/style.css
+++ b/style.css
@@ -158,7 +158,6 @@
   display: flex;
   gap: 4rem;
   width: 100%;
-  height: 29.375rem;
   justify-content: space-between;
 }
 .footer-container .footer-content .footer-first-part {
@@ -215,7 +214,6 @@
   display: flex;
   flex-direction: column;
   width: 35.5rem;
-  max-width: 37.5rem;
   position: relative;
   padding: 2rem 0 2rem 2rem;
   gap: 2rem;
@@ -384,6 +382,21 @@
   margin: 0.125rem 0 0 0.25rem;
 }
 
+/*Breakpointy*/
+@media screen and (max-width: 1023px) {
+  .footer-content {
+    flex-direction: column;
+  }
+  .footer-form {
+    padding: 2rem 0 2rem 0;
+  }
+  .footer-container .footer-content .footer-form {
+    padding: 2rem 0 2rem 0;
+  }
+  .footer-form button {
+    background-color: aqua;
+  }
+}
 /* HEADER */
 .header-container {
   background-color: rgb(234, 237, 241);
@@ -394,7 +407,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 104px;
   max-width: 90rem;
   margin: 0 3rem;
   border-bottom: 0.063rem solid rgb(209, 213, 219);
@@ -491,6 +503,17 @@
   opacity: 1;
 }
 
+/*Breakpointy*/
+@media screen and (max-width: 639px) {
+  .header-wrapper {
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 1023px) {
+  .header-nav {
+    display: none;
+  }
+}
 *, *::before, *::after {
   padding: 0;
   margin: 0;
