--- a/style.scss
+++ b/style.scss
@@ -36,9 +36,10 @@ body {
         justify-content: center;
         gap: 1rem;
         margin: 2.5rem 0 0 0;
+        flex-wrap: wrap;
 
         .main-cards-div1 {
-            width: 50%;
+            flex-basis: calc(50% - 20px);
         
             img {
                 width: 100%;
@@ -48,7 +49,7 @@ body {
         }
         
         .main-cards-div2 {
-            width: 50%;
+            flex-basis: calc(50% - 20px);
         
             img {
                 width: 100%;
@@ -409,5 +410,18 @@ body {
         .container-app-img {
             margin: 2.6875rem 0;
         }
+    }
+}
+
+/*Breakpointy*/
+
+@media screen and (max-width: 1023px) {
+    .main-cards {
+    flex-direction: column;
+    }
+
+    .main-cards-div1,
+    .main-cards-div2 {
+        width: 100%;
     }
 }
