--- a/style.css
+++ b/style.css
@@ -873,6 +873,16 @@ body {
 }
 
 /*Breakpointy*/
+@media screen and (max-width: 639px) {
+  .elektro-item {
+    flex-direction: column;
+  }
+}
+@media screen and (min-width: 640px) and (max-width: 1023px) {
+  .elektro-card {
+    flex-basis: calc(50% - 0.625rem) !important;
+  }
+}
 @media screen and (max-width: 1023px) {
   .main-cards {
     flex-direction: column;
