--- a/style.css
+++ b/style.css
@@ -709,14 +709,15 @@ body {
 }
 .section-items .items-features {
   display: flex;
-  gap: 4rem;
+  gap: 2rem;
+  flex-wrap: wrap;
 }
 .section-items .items-features .items-content {
   display: flex;
   flex-direction: column;
   border-radius: 0.75rem;
   padding: 1.5rem 1.5rem 2rem 1.5rem;
-  width: 100%;
+  width: calc(33.33% - 2.67rem);
   gap: 1.5rem;
   background-color: rgb(32, 41, 55);
 }
@@ -877,10 +878,16 @@ body {
   .elektro-item {
     flex-direction: column;
   }
+  .items-features {
+    flex-direction: column;
+  }
 }
 @media screen and (min-width: 640px) and (max-width: 1023px) {
   .elektro-card {
     flex-basis: calc(50% - 0.625rem) !important;
+  }
+  .items-features .items-content {
+    flex-basis: calc(50% - 2rem);
   }
 }
 @media screen and (max-width: 1023px) {
@@ -919,5 +926,8 @@ body {
   }
   .services-items-reverse {
     flex-direction: column-reverse;
+  }
+  .section-items {
+    padding: 6rem 2rem;
   }
 }/*# sourceMappingURL=style.css.map */
