hotova responziva sekce Section About Us, slider2 - az na konec

--- a/components/_footer.scss
+++ b/components/_footer.scss
@@ -270,6 +270,10 @@
 
 /*Breakpointy*/
 @media screen and (max-width: 1023px) {
+    .footer-container {
+        padding: 6rem 2rem;
+    }
+
     .footer-content {
         flex-direction: column;
     }
