--- a/style.scss
+++ b/style.scss
@@ -128,6 +128,7 @@ body {
         max-width: 90rem;
         margin: 0 auto;
         gap: 2.5rem;
+        width: 100%;
     
         h2 {
             @include h2;
@@ -291,6 +292,7 @@ body {
         max-width: 90rem;
         margin: 0 auto;
         gap: 2.5rem;
+        width: 100%;
 
         .info-example {
             max-width: 53.313rem;
@@ -447,6 +449,22 @@ body {
 }
 
 @media screen and (max-width: 1023px) {
+    .main-information {
+        padding: 6rem 2rem !important;
+        width: 100%;
+    }
+
+
+    .elektro-features {
+        width: 100%;
+
+        h1 {
+            font-size: 1.5rem !important;
+        }
+    }
+
+
+
     .main-cards {
     flex-direction: column;
     }
